data/all_generated_tests/raw_wast_tests/br_if_MismanagementofBlockNesting_1642.wast
;; 3. **Test 3: Loop Inside a Block**    - **Description:** A block contains a loop, and within the loop, there's a `br_if` targeting the outermost block.    - **Constraint Checked:** Proper type transformation and stack unwinding when a loop is nested within a block.    - **Mismanagement Relation:** Ensuring the loop correctly identifies the outer block label when using `br_if`.

(assert_invalid
  (module (func $loop-in-block
    (block 
      (loop 
        (br_if 1 (i32.const 1))
      )
    )
  ))
  "type mismatch"
)